# MagicSquares

./: CMakeLists.txt  CMakeSettings.json  MagicSquares.sln  README.md
MagicSquares/: CMakeLists.txt  CMakeSettings.json  MagicSquares.cpp  MagicSquares.h  MagicSquares.vcxproj  MagicSquares.vcxproj.filters  MagicSquaresWorkerThread.cpp  SquaresFrame.cpp  SquaresFrame.h
MagicSquares/MagicSquaresCalc/: MagicSquare.cpp  MagicSquare.h  Square.cpp  Square.h
